<resources>
    <string name="app_name">COLALIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log-in</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_on_account">Don\'t have on account?</string>
    <string name="your_username_id">Your username id</string>
    <string name="create_username">Create username</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="_62">+62</string>
    <string name="phone_number">Phone number</string>
    <string name="register">Register</string>
    <string name="data">Data</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="keterangan_golongan"><u>Keterangan Golongan</u></string>
    <string name="zero_value">0</string>
    <string name="ex_81234567890">ex: 81234567890</string>
    <string name="logo_register">logo register</string>
</resources>